--- a/package.json
+++ b/package.json
@@ -62,10 +62,12 @@
   },
   "dependencies": {
     "core-js": "^2.0.0",
+    "moment": "^2.19.1",
     "node-sass": "^4.5.3",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
+    "react-router-dom": "^4.2.2",
     "react-split-pane": "^0.1.66",
     "react-svg-piechart": "^1.4.0",
     "sass-loader": "^6.0.6"
